<resources>
    <string name="app_name">صانع الاختبارات</string>
    <string name="login_email">البريد الإلكتروني</string>
    <string name="login_password">كلمة المرور</string>
    <string name="signUp_password">كلمة المرور الجديدة</string>
    <string name="signUp_displayName">اسم المستخدم</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="class_label">القاعات</string>
    <string name="login_label">تسجيل الدخول</string>
    <string name="not_email">أدخل بريدًا صالحًا!</string>
    <string name="mainPage">الرئيسيّة</string>
    <string name="messages">الرسائل</string>
    <string name="settingsLabel">الضبط</string>
    <string name="createNewQuiz">اختبار جديد</string>
    <string name="createNewQuizInfo">للمتابعة، يجب اختيار نوع الاختبار الجديد!</string>
    <string name="chat">الدردشة</string>
    <string name="usernameEmailLogin">اسم المستخدم أو البريد الإلكتروني</string>
    <string name="categoryAcademic">أكاديمي</string>
    <string name="categoryFun">للترفيه فقط!</string>
    <string name="isOneTimeQuiz">اختبار بفرصة واحدة</string>
    <string name="isQuizPasswordProtected">الدخول بكلمة مرور فقط</string>
    <string name="quizPassword">رمز الدخول للاختبار</string>
    <string name="quizQuestionsCount">عدد أسئلة الاختبار</string>
    <string name="writeQuestionsButton">ابدأ بكتابة الأسئلة</string>
    <string name="cannotBeEmpty">لا يمكن أن يكون فارغًا</string>
    <string name="cannotBeGreaterThan30">أكثر عدد هو 30!</string>
    <string name="quizTitleText">عنوان الاختبار</string>
    <string name="classViaCode">رمز الانضمام للقاعة(مثال 4c-33-28-fc)</string>
    <string name="questionsText">نص السؤال</string>
    <string name="questionsTextLabel">%1$s</string>
    <string name="quizProtected">يتطلب هذا الاختبار كلمة مرور</string>
    <string name="wrongPassword">كلمة المرور غير صحيحة!</string>
    <string name="trueStatement">عبارة صحيحة</string>
    <string name="publicClass">قاعة عامة</string>
    <string name="falseStatement">عبارة خاطئة</string>
    <string name="aChoice">اكتب خيارًا</string>
    <string name="edit">تحرير</string>
    <string name="wrongFormat">ترميز خاطئ للإجابة</string>
    <string name="publishQuizText">نشر الاختبار</string>
    <string name="noMessages">ليس هناك أي رسالة بعد!</string>
    <string name="backToEditingButton">العودة والتحرير</string>
    <string name="publishQuizWithTitle">نشر الاختبار بعنوان %1$s؟</string>
    <string name="cancel">إلغاء</string>
    <string name="confirm">تأكيد</string>
    <string name="updateQuiz">تحديث الاختبار/حفظ التغييرات</string>
    <string name="addQuestion">إضافة سؤال</string>
    <string name="updateQuizDone">تم تحديث الاختبار</string>
    <string name="thanks">شكرًا لك!</string>
    <string name="previousQuestion">السؤال السابق</string>
    <string name="nextQuestion">السؤال التالي</string>
    <string name="reviewThenPost">مراجعة ونشر</string>
    <string name="reviewTemplate">هذا مجرد مثال لنص يمكنه الإستبدال لاحقا بالنص الأصلي</string>
    <string name="reviewQuestions">مراجعة الأسئلة</string>
    <string name="finishQuiz">انهاء وعرض النتيجة</string>
    <string name="startQuiz">بدأ الاختبار</string>
    <string name="seeQuizzes">الدخول</string>
    <string name="joinClassLabel">الانضمام إلى قاعة</string>
    <string name="joinClass">الانضمام</string>
    <string name="CreateClass">إنشاء قاعة</string>
    <string name="sendQuiz">نشر الاختبار</string>
    <string name="joinViaCode">الانضمام عن طريق رمز القاعة</string>
    <string name="createClassInfo">تمكنك القاعة من إنشاء اختبارات لمجموعة من المستخدمين. يمكنك جعل القاعة خاصة أو عامة</string>
    <string name="createClassClosed">يمكن الانضمام لقاعتك عن طريق الرمز أو الرابط المخصص، أنت فقط يمكنك إنشاء اختبارات</string>
    <string name="createClassOpen">يمكن لأي أحد الانضمام إلى هذه القاعة، لن يحتاج المستخدم إلى دعوة للدخول، ويمكن لأي أحد إنشاء اختبارات</string>
    <string name="getQuizAsPDF">تنزيل الاختبار</string>
    <string name="DeleteCurrentQuestion">حذف السؤال</string>
    <string name="deleteQuiz">حذف الاختبار</string>
    <string name="deleteQuizConfirm">سيتم حذف الاختبار كليًا، لا يمكنك التراجع عن هذه العمليّة.</string>
    <string name="thisWillDeleteCurrentQuestion">سيتم حذف السؤال الحالي مع الاجابة.</string>
    <string name="questionsCountText">عدد الأسئلة: %1$d</string>
    <string name="quizAuthorText">المؤلف: %1$s</string>
    <string name="questionText">السؤال: %1$s</string>
    <string name="resizeQuiz">تغيير عدد الأسئلة</string>
    <string name="thisWillDeleteRemainingQuestions">سيتم حذف الأسئلة الإضافية</string>
    <string name="reportQuiz">الإبلاغ عن الاختبار</string>
    <string name="required">مطلوب</string>
    <string name="reportQuizConfirm">هل أنت متأكد أن هذا الاختبار غير لائق؟</string>
    <string name="editQuiz">تعديل الاختبار</string>
    <string name="editQuestion">تعديل السؤال</string>
    <string name="existingQuestions">سيتم حذف الأسئلة الموجودة</string>
    <string name="existingQuestionsMessage">اختر تأكيد للحذف، الغاء لاستعادة الأسئلة</string>
    <string name="completeAllQuestions">يجب عليك كتابة جميع الأسئلة.</string>
    <string name="oneQuestionAtLeast">اكتب سؤالًا على الأقل!</string>
    <string name="leaveClass">المغادرة</string>
    <string name="createLink">رابط القاعة</string>
    <string name="leaveClassConfirm">لا يمكنك العودة إلى إذا امتلكت رمز القاعة، أو كانت القاعة عامة!</string>
    <string name="scoreTitle">نتيجتك</string>
    <string name="score">الإجابات الصحيحة: %1$d من أصل %2$d</string>
    <string name="sendRating">ارسال التقييم</string>
    <string name="sendMessage">مراسلة المؤلف</string>
    <string name="chatMessage">إرسال رسالة</string>
    <string name="suggestIdea">اقتراح فكرة</string>
    <string name="ratingSent">تم ارسال التقييم!</string>
    <string name="rateQuiz">قم بتقييم الاختبار</string>
    <string name="questionNumber">%1$d/%2$d</string>
    <string name="ok">حسنًا</string>
    <string name="okEn">Okay</string>
    <string name="placeHolderZero">0</string>
    <string name="quizAlreadyTaken">إعادة الاختبار</string>
    <string name="send">ارسال</string>
    <string name="messageText">محتوى الرسالة</string>
    <string name="messageSent">تم ارسال الرسالة</string>
    <string name="sendTo">ارسال إلى: %1$s</string>
    <string name="userNameExists">اسم المستخدم موجود</string>
    <string name="checkFields">بعض الحقول غير صالحة!</string>
    <string name="invalidEmail">البريد غير صالح</string>
    <string name="containsArChars">لا يجب أن يحتوي حروفًا عربيّة!</string>
    <string name="passwordTooShort">كلمة المرور قصيرة جدًا</string>
    <string name="accountExists">الحساب موجود</string>
    <string name="loginFailed">فشل تسجيل الدخول، تحقق من معلومات حسابك</string>
    <string name="invalidLoginInfo">فشل الدخول، تحقق من معلومات حسابك</string>
    <string name="cannotLogin">تعذّر الدخول، حاول مجددًا في وقت لاحق!</string>
    <string name="noUser">لم يتم العثور على حساب.</string>
    <string name="NoContent">لا يوجد أي اختبار بعد!</string>
    <string name="noClasses">ليس لديك أي قاعات بعد!</string>
    <string name="noChat">هذه بداية شيء جميل!</string>
    <string name="classNotFound">تعذّر العثور على القاعة</string>
    <string name="classJoined">تم الانضمام إلى القاعة!</string>
    <string name="answersSaved">تم حفظ الإجابات كصورة</string>
    <string name="NoPublicClassesFound">لا يوجد أي قاعة... يمكنك دائمًا إنشاء قاعة</string>
    <string name="quizScore">
        نتيجتك لـ %1$s
        \n
        عدد الأسئلة: %2$d
        \n
        عدد الإجابات الصحيحة: %3$d
        \n
        النسبة المئوية: %4$s
    </string>
    <string name="joinCode">رمز القاعة: %1$s</string>
    <string name="copied">تم النسخ!</string>
    <string name="contentPasted">تم جلب الرمز</string>
    <string name="saveQuiz">حفظ الاختبار</string>
    <string name="withAnswers">مع الإجابة</string>
    <string name="withoutAnswers">من دون الإجابة</string>
    <string name="quizWillBeSavedImage">سيتم حفظ الإختبار كـ صورة تحوي جميع الأسئلة</string>
    <string name="profileLabel">الملف الشخصي</string>
    <string name="joinDate">تاريخ الانضمام</string>
    <string name="quizzesTaken">سجل الاختبارات</string>
    <string name="currentPoints">النقاط</string>
    <string name="checkQuizzes">ادخل الاختبارات لترى الإجابات الصحيحة</string>
    <string name="noRecentQuizzes">لم تقم بأي اختبار بعد!</string>
    <string name="viewAnswers">عرض الإجابات</string>
    <string name="userNameText">\@%1$s</string>
    <string name="writeAnything">اكتب أي شيء</string>
    <string name="className">اسم القاعة/الصف</string>
    <string name="instructorName">اسم المدرس</string>
    <string name="editedSuccessfully">تم التعديل</string>
    <string name="cacheDeleted">تم حذف البيانات المؤقتة</string>
    <string name="chooseQuestionToDelete">اختر سؤالًا لحذفه</string>
    <string name="changeLanguage">تغيير اللغة</string>
    <string name="emptyLog">السجل فارغ</string>
    <string name="cannotViewLog">لا يمكنك عرض السجل حاليًا</string>
    <string name="answerQuestions">أجب على جميع الأسئلة</string>
    <string name="answer">رمز الإجابة( من 1 إلى 4، أو أ، ب، ج، د، أو A, B, C, D)</string>
    <string name="showPassword">عرض كلمة المرور</string>
    <string name="showMembers">عرض المشاركين</string>
    <string name="membersCount">عدد المشاركين: %1$d</string>
    <string name="alreadyRated">سبق وقيّمت هذا الاختبار</string>
    <string name="suggestions">اسم المستخدم غير صالح، بعض الاقتراحات: \n
        %1$s
    </string>
    <string name="deleteMember">حذف المشارك</string>
    <string name="deleteMemberConfirm">سيتم حذف المشارك فورًا، ولن يتم تنبيهه بذلك</string>
    <string name="privacyPolicyAr">سياسة الخصوصية والاستخدام</string>
    <string name="privacyPolicyEn">Privacy Policy and Terms of Service</string>
    <string name="cannotEdit">لا يمكنك التعديل من هنا</string>
    <string name="clearCache">حذف البيانات المؤقتة</string>
    <string name="changeTheme">تغيير الألوان</string>
    <string name="confirmChangeTheme">هل ترغب في التغيير إلى هذه الألوان؟</string>
    <string name="FAQTitle">أسئلة شائعة</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="confirmLogout">هل أنت متأكد من رغبتك في تسجيل الخروج؟</string>
    <string name="moreApps">المزيد من التطبيقات</string>
    <string name="newMessage">رسالة جديدة</string>
    <string name="newMessageFrom">لديك رسالة من %1$s</string>
    <string name="newPoints">نقاط لك، %1$s</string>
    <string name="newPointsForYou">أنهى أحدهم اختبار لك وزادت نقاطك!</string>
    <string name="app_notifications_description">تنبيهات جديدة مثل الرسائل والتقييمات، وأحيانًا من الاختبارات التي قمت
        بنشرها
    </string>
    <string name="mulChoice">متعدد الاختيار</string>
    <string name="trueFalse">صح، خطأ</string>
    <string-array name="quizQuestionsTypes">
        <item>متعدد الاختيار</item>
        <item>صح، خطأ</item>
    </string-array>
    <string-array name="randomBios">
        <item>جاهز!</item>
        <item>أهلًَا، فلنختبر سويًا!</item>
        <item>فقط من مات فاته التعلم!</item>
        <item>يمكنك السؤال بشكل عام أو خاص، ستحصل على نفس الإجابة</item>
        <item>إذا كنت تعرف، فأنت تعرف</item>
        <item>إذا كان عليك أن تسأل، لن تعرف</item>
        <item>سأكمل هذا لاحقًا!</item>
        <item>رائع!</item>
        <item>هذا هو الجزء الذي تختبر فيه!</item>
        <item>مرحبًا بالعالم!</item>
        <item>مرحبًا بالاختبار!</item>
        <item>المستقبل يبدأ هنا!</item>
        <item>فلنختبر يا صديق</item>
        <item>الاختبارات لا تتغير أبدًا!</item>
        <item>أهلا، هذا أنا!</item>
        <item>أنا لست الهدف</item>
        <item>تخيّل عبارة جميلة هنا</item>
    </string-array>
</resources>