<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/navigation"
            app:startDestination="@id/mainFragment">

    <fragment android:id="@+id/loginFragment" android:name="com.lemonlab.quizmaker.LoginFragment"
              android:label="@string/login_label" tools:layout="@layout/fragment_login">
        <action android:id="@+id/loginToMain" app:destination="@id/mainFragment"
                app:launchSingleTop="true" app:popUpToInclusive="false"/>
    </fragment>
    <fragment android:id="@+id/createAccount" android:name="com.lemonlab.quizmaker.CreateAccount"
              android:label="@string/create_account" tools:layout="@layout/fragment_create_account">
        <action android:id="@+id/createToMain" app:destination="@id/mainFragment" app:launchSingleTop="true"
                app:popUpToInclusive="false"/>
    </fragment>
    <fragment android:id="@+id/mainFragment" android:name="com.lemonlab.quizmaker.MainFragment"
              android:label="@string/mainPage" tools:layout="@layout/fragment_main">
        <action android:id="@+id/MainToLogin" app:destination="@id/loginFragment"/>
        <action android:id="@+id/goToQuizNow" app:destination="@+id/takeQuizFragment"/>
    </fragment>
    <fragment android:id="@+id/settingsFragment" android:name="com.lemonlab.quizmaker.SettingsFragment"
              android:label="@string/settingsLabel" tools:layout="@layout/fragment_settings"/>
    <fragment android:id="@+id/createQuiz" android:name="com.lemonlab.quizmaker.CreateQuiz"
              android:label="@string/createNewQuiz" tools:layout="@layout/fragment_create_quiz"/>
    <fragment android:name="com.lemonlab.quizmaker.ViewEditQuestions"
              android:label="@string/createNewQuiz" tools:layout="@layout/questions_fill_form"
              android:id="@+id/viewEditQuestions">
        <argument android:name="quizID" app:argType="string" android:defaultValue="empty"/>
    </fragment>
    <fragment android:id="@+id/takeQuizFragment" android:name="com.lemonlab.quizmaker.TakeQuizFragment"
              android:label="@string/app_name" tools:layout="@layout/fragment_take_quiz">
        <argument android:name="quizID" app:argType="string"/>
    </fragment>
    <fragment android:id="@+id/messagesFragment" android:name="com.lemonlab.quizmaker.MessagesFragment"
              android:label="@string/messages" tools:layout="@layout/fragment_messages"/>
    <fragment android:id="@+id/profileFragment" android:name="com.lemonlab.quizmaker.ProfileFragment"
              android:label="@string/profileLabel" tools:layout="@layout/fragment_profile">
        <action android:id="@+id/viewAnswers" app:destination="@id/viewEditQuestions"
                app:launchSingleTop="true" app:popUpToInclusive="false" app:popUpTo="@+id/mainFragment"/>
    </fragment>
</navigation>