<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/createNewQuiz"
        android:textAlignment="center"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/createNewQuizInfo"
        android:textAlignment="center"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/tfRad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="?attr/iconColor"
            android:padding="8dp"
            android:text="@string/trueFalse"
            android:textColor="?attr/textColor"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/mulRad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="?attr/iconColor"
            android:padding="8dp"
            android:text="@string/mulChoice"
            android:textColor="?attr/textColor"
            android:textStyle="bold" />

    </RadioGroup>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirmNewQuiz"
            style="@style/QuestionFormButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/confirm" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelNewQuiz"
            style="@style/QuestionFormButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>