<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item_borders"
    android:orientation="vertical"
    android:padding="4dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/joinViaCode"
        android:textSize="23sp" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/classCodeInput"
        style="@style/loginEditTextStyle"
        android:drawableEnd="@drawable/ic_lock"
        android:drawableTint="?attr/iconColor"
        android:hint="@string/classViaCode"
        android:padding="8dp"
        android:drawablePadding="8dp"
        android:textColorHint="?attr/textColorHint" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/joinViaCodeConfirm"
            style="@style/QuestionFormButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/confirm" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/joinViaCodeCancel"
            style="@style/QuestionFormButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>