<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:background="@drawable/item_borders"
    android:orientation="vertical"
    android:padding="4dp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reviewQuestionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/reviewTemplate"
        android:textSize="21sp" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/reviewIsTrueCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:text="@string/trueStatement"
        android:textColor="?attr/textColor"
        android:textStyle="bold"
        android:visibility="gone" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editQuestion"
        style="@style/QuestionFormButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/ic_edit"
        android:drawablePadding="4dp"
        android:text="@string/editQuestion"
        android:visibility="gone" />


</androidx.appcompat.widget.LinearLayoutCompat>